services/harmony/public/css/workflow-ui/default.css
.table-filter {
    --tag-inset-shadow-size: 2em;
}

.helpful-th, .helpful-span {
    cursor: help;
}

#workflow-items-table-container, #jobs-table-container {
    overflow-y: scroll;
    max-height: 80vh;
}

.sticky-paging {
    position: sticky;
    bottom: -1px;
}

#message-td {
    word-break: break-word;
}

.bi-copy {
    color:rgb(232, 181, 0)!important;
    cursor: pointer;
}

.bi-copy:hover {
    color: #212529!important;
}

.job-url-th {
    font-size: .95em;
    background: linear-gradient(to top, rgb(252, 251, 251), white);
    border-top-color:white;
    padding-bottom: .3rem !important;
}

.job-url-text {
    font-size: .9em;
    font-family: SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace;
    font-weight: normal;
    max-width: 100%;
    word-break: break-all;
}

#workflow-ui-jobs-table .job-table-row {
    border-bottom-color: white;
}

.bg-label {
    background-color: #92a7ba !important;
}

.job-alert {
    margin-bottom: 0;
}

#label-nav-item > * {
    z-index: 1021;
}

.dropdown-divider {
    border-top: 1px solid #6b7c8d;
}

#labels-list {
    overflow: hidden;
    overflow-y: auto;
    max-height: calc(100vh - 300px);
    list-style: none;
    padding: 5px 0;
}

.label-li {
    max-width: 200px;
}

#label-dropdown-menu {
    max-width: 40vw;
}

#create-label-link {
    word-wrap: break-word;
}

